feat: integrated numeric core
This marks the shift from a purpose-built mora jai library to a shared crate with multiple implementing repositories. It is possible that, one day, it may even solve pictures.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "mora-jai-solver"
-version = "0.1.0"
+name = "blue-prince"
+version = "0.2.0"
 edition = "2024"
 
 [lib]
@@ -8,6 +8,9 @@ path = "src/lib.rs"
 
 [[bin]]
 name = "mora_jai_solver"
+
+[[bin]]
+name = "numeric_core"
 
 [[bench]]
 name = "solve_tree_search"
